fix: on safari uploadcare page is not visible

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -323,3 +323,7 @@
   width: 100%;
   padding: 10px;
 }
+
+.uploadcare--page{
+  overflow: visible!important;
+}
